--- a/kimeodml/1주차.md
+++ b/kimeodml/1주차.md
@@ -104,7 +104,7 @@
 <br/>
 
 - 객체에 대한 첨조값일 경우
-	- ==user.sizes==는 객체이기 때문에 참조에 의한 복사가 됨
+	- `user.sizes`는 객체이기 때문에 참조에 의한 복사가 됨
 	- user[key]의 각 값을 검사하면서, 반복문 사용 or [_.cloneDeep(obj)_](https://lodash.com/docs#cloneDeep)활용 > '깊은 복사' 가능
   ```
   let user = {
@@ -361,6 +361,8 @@
 	- `string` - `alert` 같이 문자열을 필요로 하는 연산
 	- `number` - 수학 연산
 	- `default` - 연산을 확신할 수 없을 때 드물게 발생
+
+  <br />
 
 - 객체 - 원시형 변환 순서
   1. `obj[Symbol.toPrimitive](hint)` 메서드가 있는 확인, 있다면 호출
