feat: new 연산자와 생성자 함수 내용 추가

--- a/dooohun/1주차.md
+++ b/dooohun/1주차.md
@@ -205,6 +205,38 @@ alert(user && user.address && user.address.street); // undefined
 
 AND를 연결해서 사용하면 코드가 아주 길어진다는 단점이 있습니다.
 
+# new 연산자와 생성자 함수
+
+## 생성자 함수
+
+생성자 함수(constructor function)와 일반 함수에 기술적인 차이는 없습니다. 다만 생성자 함수는 아래 두 관례를 따릅니다.
+
+1. 함수 이름의 첫 글자는 대문자로 시작합니다.
+2. 반드시 `'new'` 연산자를 붙여 실행합니다.
+
+```jsx
+function User(name) {
+  this.name = name;
+  this.isAdmin = false;
+}
+
+let user = new User("보라");
+
+alert(user.name); // 보라
+alert(user.isAdmin); // false
+```
+
+생성자의 의의는 재사용할 수 있는 객체 생성 코드를 구현하는 것에 있습니다.
+
+**모든 함수는 생성자 함수가 될 수 있습니다. `new`** 를 붙여 실행한다면 어떤 함수라도 객체 생성 코드를 구현할 수 있습니다.
+
+## 생성자와 return 문
+
+return문이 있다면 다음과 같은 일이 벌어집니다.
+
+- 객체를 `return` 한다면 `this` 대신 객체가 반환됩니다.
+- 원시형을 `return` 한다면 `return`문이 무시됩니다.
+
 # 심볼형
 
 Symbol은 원시형 데이터로, 유일무이한 식별자를 만드는 데 사용됩니다. 이름이 같더라더 값이 항상 다릅니다. 이름이 같을 때 값도 같길 원한다면 전역 레지스트리를 사용해야 합니다. Symbol.for(key)는 key 라는 이름을 가진 전역 심볼을 반환합니다.
