feat: 5주차 내장 객체 프로토타입

--- a/daepan/5주차.md
+++ b/daepan/5주차.md
@@ -96,3 +96,60 @@ alert(user.fullName); // John Smith, 본래 user에 있었던 프로퍼티 값
 
 위와 같이 프로퍼티가 난잡한 경우, 프로퍼티가 상속이냐 아니냐를 구분하는 방법은 `obj.hasOwnProperty(key)`를 활용해서
 본인의 프로퍼티인지 상속받은 프로퍼티인지를 구분할 수 있다.
+
+## 내장 객체의 프로토타입
+
+모든 내장 생성자 함수에서 프로퍼티를 사용하는데, 내장 객체의 프로토타입에 대해 자세히 알아보자
+
+### Object.prototype
+
+빈 객체를 사용하면서 우리는 이런 타입을 볼 수 있다.
+```js
+let obj = {};
+alert( obj ); // "[object Object]" 출력
+```
+obj는 분명 비어있는 객체지만 `[object Object]`라는 문자열이 출력됩니다. 이 데이터는 어디서 나왔는가?
+
+obj = {}는 다르게 보면 obj = new Object()라는 것임을 알고 있으면 된다.
+이렇게 생성자를 하게 된다면 obj의 Prototype은 Object를 가리키게 된다.
+
+따라서 obj.toString()을 호출하면 Object.prototype에서 해당 메서드를 가져오게 된다.
+
+### 다양한 내장 객체의 프로토타입
+
+Array, Date, Function을 비롯한 내장 객체들 역시 프로토타입에 메서드를 저장한다.
+
+예를 들어, 배열 [1, 2, 3]을 만들면 new Array()의 디폴트 생성자가 내부에서 동작하여 Array.prototype이 배열 [1, 2, 3]의 프로토타입이 되고 개발자는 Array.prototype을 통해 배열 메서드를 사용할 수 있다.
+=> 이런 내부 동작은 메모리 효율을 높여주는 장점을 가져다준다.
+
+명세서에선 모든 내장 프로토타입의 상속 트리 꼭대기엔 Object.prototype이 있어야 한다고 규정하기에, 모든 것은 객체의 상속을 받는다고 표현하기도 한다.
+
+![alt text](./img/image.png)
+
+### 그러면 원시값은?
+
+위에서 객체들에 대해서는 문제가 없지만, 원시값의 경우에는 다르다.
+문자열과 숫자, 불린값은 객체가 아니기 때문에, 원시 타입 값의 프로퍼티에 접근하려고 하면 내장 생성자 String, Number, Boolean을 사용하는 임시 래퍼(wrapper) 객체가 생성되는 동작 과정이 이루어진다. 물론, 임시 래퍼 객체는 이런 메서드를 제공하고 난 후에 사라진다.
+
+래퍼 객체는 보이지 않는 곳에서 만들어지는데 엔진에 의해 최적화가 이루어지며, 명세서엔 각 자료형에 해당하는 래퍼 객체의 메서드를 프로토타입 안에 구현해 놓고 String.prototype, Number.prototype, Boolean.prototype을 사용해 쓰도록 규정하고 있다.
+
+여기서, null과 undefind의 경우에는 대응하는 래퍼 객체는 없기에 메서드와 프로토타입을 사용할 수 없다.
+
+네이티브 프로토타입 수정을 통해 프로퍼티를 추가 할 수 있지만, 프로토타입은 전역적인 영향을 미치기 때문에 기존 코드와 충돌의 가능성이 있으므로 지양하는 것이 좋다.
+```js
+// 네이티브 프로토타입 수정의 예시
+String.prototype.show = function() {
+  alert(this);
+};
+
+"BOOM!".show(); // BOOM!
+```
+모던 프로그래밍에서 네이티브 프로토타입 변경을 허용하는 경우는 딱 하나, 바로 폴리필을 만드는 경우이다.
+
+폴리필은 자바스크립트 명세서에 있는 메서드와 동일한 기능을 하는 메서드 구현체를 의미한다. 
+명세서에는 정의되어 있으나 특정 자바스크립트 엔진에서는 해당 기능이 구현되어있지 않을 때 폴리필을 사용한다.
+
+폴리필을 직접 구현하고 난 후, 폴리필을 내장 프로토타입에 추가할 때만 네이티브 프로토타입을 변경하는 것을 원칙으로 한다.
+
+
+
