--- a/daepan/예상 질문지.md
+++ b/daepan/예상 질문지.md
@@ -26,6 +26,13 @@ VariableEnvironment, LexicalEnvironment, thisBinding 이 수집됩니다.
 ## ES5, ES6 에서의 스코프 생성 규칙을 설명해주세요.
 ES5 에서는 함수에 의해서만 스코프가 생성됩니다. 이 때문에 if, while() 문 블록 내에 서의 식별자를 블록 바깥에서 접근할 수 있습니다. 그러나 ES6 에서는 블록에 의해서 스코프가 생성됩니다. 즉, 내부에 선언된 변수를 참조할 수 없습니다.
 
+## this 는 언제 결정되나요?
+함수를 호출할 때 결정됩니다.
+콜백 함수에서 this 는 어떻게 결정되나요? 제어권을 위임한 객체에 바인딩됩니다.
+
+## arrow function 의 this 가 결정되는 방식을 설명해보세요.
+function keyword 는 this 가 동적으로 결정되지만, arrow function 의 경우는 정적으로 결정됩니다. 호출되는 순간 자신을 감싼 scope 를 가리키게 되는데, method 로 호출되거나 등의 명시적인 바인딩 함수도 무시되며 오로지 scope 에 의해 결정됩니다.
+
 ## 명시적으로 this 를 바인딩 할 수 있는 메서드는 어떤것이 있나요?
 call, apply, bind 가 있습니다.
 
