--- a/daepan/예상 질문지.md
+++ b/daepan/예상 질문지.md
@@ -55,3 +55,8 @@ call, apply, bind 가 있습니다.
 
 ## 호이스팅이 발생하는 시점은 언제인가요?
 실행 컨텍스트가 활성화 될 때, 호이스팅이 발생합니다.
+
+## 비동기 방식과 동기 방식에 대해 설명해주세요
+Syncronous 동기는 요청을 보낸 후 해당 요청의 응답을 받아야 다음 동작을 실행하는 방식을 말하며, Asynchronous 비동기는 요청을 보낸 후 응답과 관계없이 다음 동작을 실행할 수 있는 방식을 의미합니다.
+
+ 
